Fixed Reponse overflow

--- a/src/app/components/service/service.component.scss
+++ b/src/app/components/service/service.component.scss
@@ -91,6 +91,8 @@
   width: 92%;
   border: 1px solid #9A9A9A;
   background-color: #F3F3F3;
+  overflow: auto;
+  padding-bottom: 5px;
 }
 
 .button-download{
